Adding /me endpoint 👤
